[package]
name = "lovr_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = {version = "0.30.8", features=["rand"]}
mlua = { version = "0.11.4", features = ["luajit","module"] }
rand = "0.9.2"
derive_more = {version = "2.0.1", features=["from","into","as_ref"]}
const-str = { version = "0.7.0", features = ["case"] }
